--- a/endorse/css/quiz_css.css
+++ b/endorse/css/quiz_css.css
@@ -31,3 +31,8 @@
 .error {
   display:none;
 }
+@media screen and (min-width: 768px) {
+  .jumbotron .h1, .jumbotron h1 {
+    font-size: 63px !important;
+  }
+}
