--- a/endorse/css/quiz_css.css
+++ b/endorse/css/quiz_css.css
@@ -31,7 +31,7 @@
 .error {
   display:none;
 }
-@media screen and (min-width: 768px) {
+@media (min-width: 768px) {
   .jumbotron .h1, .jumbotron h1 {
     font-size: 63px !important;
   }
