--- a/endorse/css/quiz_css.css
+++ b/endorse/css/quiz_css.css
@@ -32,13 +32,14 @@
   display:none;
 }
 
+#response-title {
+  font-size: 21px !important;
+  font-weight: 200 !important;
+  color:black !important;
+}
 @media (min-width: 768px) {
   .jumbotron .h1, .jumbotron h1 {
     font-size: 63px !important;
     font-weight:!important;
-  }
-  #response-title {
-    font-size: 21px !important;
-    font-weight: 200 !important;
   }
 }
