--- a/endorse/css/quiz_css.css
+++ b/endorse/css/quiz_css.css
@@ -32,7 +32,7 @@
   display:none;
 }
 
-#response-title {
+#steps-subtitle {
   font-size: 21px !important;
   font-weight: 200 !important;
   color:black !important;
