--- a/endorse/css/quiz_css.css
+++ b/endorse/css/quiz_css.css
@@ -1,3 +1,16 @@
+.jumbotron .p, .jumbotron p, #steps-subtitle {
+  font-size: 21px !important;
+  font-weight: 200 !important;
+  color:black !important;
+}
+@media (min-width: 768px) {
+  .jumbotron .h1, .jumbotron h1 {
+    font-size: 63px !important;
+    font-weight:!important;
+  }
+}
+
+
 #contact-button {
   /*display: none;*/
 }
@@ -30,16 +43,4 @@
 }
 .error {
   display:none;
-}
-
-.jumbotron .p, .jumbotron p {
-  font-size: 21px !important;
-  font-weight: 200 !important;
-  color:black !important;
-}
-@media (min-width: 768px) {
-  .jumbotron .h1, .jumbotron h1 {
-    font-size: 63px !important;
-    font-weight:!important;
-  }
 }
