--- a/endorse/css/quiz_css.css
+++ b/endorse/css/quiz_css.css
@@ -3,12 +3,7 @@
   font-weight: 200 !important;
   color:#676a6c !important;
 }
-@media (min-width: 768px) {
-  .jumbotron .h1, .jumbotron h1 {
-    font-size: 62px !important;
-    font-weight:!important;
-  }
-}
+
 
 .btn-primary {
   font-weight: 400 !important;
@@ -19,6 +14,24 @@
   border-color: #204d74 !important;
   }
 }
+
+.error {
+  color:blue;
+}
+.wizard > .steps{
+  font-size:8px !important;
+}
+@media (min-width: 768px) {
+  .jumbotron .h1, .jumbotron h1 {
+    font-size: 62px !important;
+    font-weight:!important;
+  }
+  .wizard > .steps {
+    font-size:13px !important;
+  }
+}
+
+/* New above */
 
 
 #contact-button {
