--- a/endorse/css/quiz_css.css
+++ b/endorse/css/quiz_css.css
@@ -18,7 +18,7 @@
 .error {
   color:blue;
 }
-.wizard > .steps{
+.wizard > .steps, .wizard > .steps .number {
   font-size:8px !important;
 }
 @media (min-width: 768px) {
