--- a/endorse/css/quiz_css.css
+++ b/endorse/css/quiz_css.css
@@ -27,6 +27,10 @@
 .small-button-text {
   font-size:6px;
 }
+#discover {
+  margin-top:0px !important;
+  padding-top:0px !important;
+}
 @media (min-width: 768px) {
   .small-button-text {
     font-size:12px;
