--- a/endorse/css/quiz_css.css
+++ b/endorse/css/quiz_css.css
@@ -31,10 +31,14 @@
   margin-bottom:0px !important;
   padding-bottom:0px !important;
 }
+#discover {
+  margin-top:0px !important;
+  padding-top:0px !important;
+}
 @media (min-width: 768px) {
   #testimonials {
-    margin-bottom:10px !important;
-    padding-bottom:10px !important;
+    margin-bottom:25px !important;
+    padding-bottom:25px !important;
   }
   .small-button-text {
     font-size:12px;
