--- a/endorse/css/quiz_css.css
+++ b/endorse/css/quiz_css.css
@@ -31,6 +31,10 @@
   margin-bottom:0px !important;
   padding-bottom:0px !important;
 }
+#discover .navy-line {
+  margin-top:0px !important;
+  padding-top:0px !important;
+}
 @media (min-width: 768px) {
   #testimonials {
     margin-bottom:40px !important;
