--- a/endorse/css/quiz_css.css
+++ b/endorse/css/quiz_css.css
@@ -35,6 +35,9 @@
   margin-top:0px !important;
   padding-top:0px !important;
 }
+#discover {
+  padding-bottom:50px !important;
+}
 @media (min-width: 768px) {
   #testimonials {
     margin-bottom:40px !important;
