--- a/endorse/css/quiz_css.css
+++ b/endorse/css/quiz_css.css
@@ -38,7 +38,16 @@
 #discover {
   padding-bottom:50px !important;
 }
+.btn-group-lg>.btn, .btn-lg {
+  padding: 5px 8px !important;
+  font-size:14px !important;
+}
+
 @media (min-width: 768px) {
+  .btn-group-lg>.btn, .btn-lg {
+    padding: 10px 16px !important;
+    font-size:18px !important;
+  }
   #testimonials {
     margin-bottom:40px !important;
     padding-bottom:40px !important;
