--- a/endorse/css/quiz_css.css
+++ b/endorse/css/quiz_css.css
@@ -41,6 +41,8 @@
 .btn-group-lg > .btn, .btn-lg {
   padding: 5px 8px !important;
   font-size:14px !important;
+  line-height:1.3333333 !important;
+  border-radius:6px !important;
 }
 
 @media (min-width: 768px) {
