--- a/endorse/css/quiz_css.css
+++ b/endorse/css/quiz_css.css
@@ -48,8 +48,13 @@
 .wizard > .content > .body label {
   margin-bottom: 0.2em !important;
 }
-
+.ibox-content h2 {
+  font-size: 18px !important;
+}
 @media (min-width: 768px) {
+  .ibox-content h2 {
+    font-size: 24px !important;
+  }
   .btn-group-lg > .btn, .btn-lg {
     padding: 10px 16px !important;
     font-size:18px !important;
